<?xml version="1.0" encoding="utf-8"?>
<resources>
    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
        <!-- Customize your theme here. -->
    </style>

    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
        <item name="android:windowBackground">@color/oct2</item>
    </style>
    
    <string name="tppTitle">
        Terms and Conditions for Feedbox: An Android-based Application for Managing Stakeholders’ Feedback of Bulacan State University Bustos Campus
    </string>

    <string name="tppEffectDate">
        Effective Date:
    </string>

    <string name="Date">
         November 23, 2023
    </string>

    <string name="tppPleaseRead">
        Please read these Terms and Conditions ("Terms") carefully before using our Feedbox Application. These Terms apply to all users of the application. By accessing or using the application, you agree to be bound by these Terms. If you do not agree with any part of these Terms, do not use the application.
    </string>

    <string name="tppOne">
        1. Use of the Application
    </string>

    <string name="tppOneOne">
        1.1 Eligibility
    </string>
    <string name="tppOneOneDes">
        You must be a student, parent, or faculty member of the respective school to use the Feedbox Application. By using the application, you represent and warrant that you meet this eligibility requirement.
    </string>

    <string name="tppOneTwo">
        1.2 User Conduct
    </string>
    <string name="tppOneTwoDes">
        You agree to use the application for lawful purposes and in compliance with these Terms. You shall not engage in any activity that may interfere with the functioning of the application or harm its users.
    </string>

    <string name="tppOneThree">
        1.3 Account Registration
    </string>
    <string name="tppOneThreeDes">
         To access certain features of the application, you may be required to create an account. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account. Students &amp; Faculty Members are required to use their bulsu email.
    </string>

    <string name="tppTwo">
        2. Feedback and Content
    </string>

    <string name="tppTwoOne">
        2.1 User Feedback
    </string>
    <string name="tppTwoOneDes">
        The Feedbox Application allows users to provide feedback and comments on various aspects of the school. By submitting feedback or content, you grant us a non-exclusive, worldwide, royalty-free, perpetual, and irrevocable right to use, reproduce, modify, adapt, publish, translate, distribute, and display such feedback or content for any purpose.
    </string>

    <string name="tppTwoTwo">
        2.2 Content Guidelines
    </string>
    <string name="tppTwoTwoDes">
        You agree not to submit or share any content that is unlawful, abusive, harassing, defamatory, or otherwise objectionable. We reserve the right to remove any content that violates these guidelines or is deemed inappropriate in our sole discretion.
    </string>

    <string name="tppThree">
        3. Intellectual Property
    </string>

    <string name="tppThreeOne">
        3.1 Ownership
    </string>
    <string name="tppThreeOneDes">
        The Feedbox Application and its content, including but not limited to text, graphics, logos, and software, are the property of our company or its licensors and are protected by intellectual property laws. You shall not use, reproduce, modify, or distribute any content from the application without our prior written consent.
    </string>

    <string name="tppFour">
        4. Disclaimers and Limitation of Liability
    </string>

    <string name="tppFourOne">
        4.1 Disclaimer
    </string>
    <string name="tppFourOneDes">
        The Feedbox Application is provided on an "as-is" and "as available" basis. We make no representations or warranties of any kind, express or implied, regarding the application\'s availability, accuracy, reliability, or fitness for a particular purpose.
    </string>

    <string name="tppFourTwo">
        4.2 Limitation of Liability
    </string>
    <string name="tppFourTwoDes">
        In no event shall we be liable for any indirect, incidental, special, or consequential damages arising out of or in connection with your use of the Feedbox Application, including but not limited to loss of data, loss of business, or loss of profits.
    </string>

    <string name="tppFive">
        5. Modifications and Termination
    </string>

    <string name="tppFiveOne">
        5.1 Modifications
    </string>
    <string name="tppFiveOneDes">
        We reserve the right to modify, suspend, or terminate the Feedbox Application or any part thereof at any time without prior notice.
    </string>

    <string name="tppFiveTwo">
        5.2 Termination
    </string>
    <string name="tppFiveTwoDes">
        We may, in our sole discretion, terminate your access to the application if we believe you have violated these Terms or engaged in any unauthorized use of the application.
    </string>

    <string name="tppSix">
        6. Contact Us
    </string>

    <string name="tppSixOne">
        6.1 If you have any questions, concerns, or inquiries regarding these Terms, please contact us at feedbox@gmail.com
    </string>

    <string name="tppLastPart">
        By using our School Feedback Application, you acknowledge that you have read, understood, and agreed to these Terms.
    </string>



    <string name="app_name">FeedBox</string>
    <string name="UTspn">Select User</string>

    <string-array name="listUserType">
        <item>Student</item>
        <item>Faculty/Administrator</item>
        <item>Parent/Old Student/Visitor</item>
        <item>Other School Personnel</item>
    </string-array>

    <string-array name="listMonths">
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
    </string-array>

    <string-array name="listAYActive">
        <item>active</item>
        <item>inactive</item>
    </string-array>

    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="list_specific">
        <item>details</item>
        <item>sub_details</item>
        <item>what_happened</item>
    </string-array>

    <style name="Button.BgD" parent="ThemeOverlay.AppCompat">
        <item name="colorAccent">@android:color/background_dark</item>
    </style>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>