<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="10dp"
                android:text="@string/tppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginRight="10dp"
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppEffectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:text="@string/Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <TextView
                android:textSize="10dp"
                android:text="@string/tppPleaseRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppOneOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppOneOneDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppOneTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppOneTwoDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppOneThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppOneThreeDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppTwoOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppTwoOneDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppTwoTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppTwoTwoDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppThreeOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppThreeOneDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppFourOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppFourOneDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppFourTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppFourTwoDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppFiveOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppFiveOneDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppFiveTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tppFiveTwoDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppSix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:text="@string/tppSixOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <TextView
                android:text="@string/tppLastPart"
                android:textSize="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    android:id="@+id/cardViewDisagree"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/oct2"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cbcancel"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15sp"
                        android:layout_marginTop="15sp"
                        android:layout_marginBottom="15sp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/cabin"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="DISAGREE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    android:id="@+id/cardViewAgree"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/oct1"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cbconfirm"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15sp"
                        android:layout_marginTop="15sp"
                        android:layout_marginBottom="15sp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/cabin"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="AGREE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>